@@ -539,4 +539,7 @@
   
 - Mon Jan 13 2014 (A. Schulz alias hexenmeister)
   - Added new module "SYSMON"
+
+- Fri Jan 16 2014 (andreas-fey)
+  - Added new module "pilight"
   
